--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.label-feature{
+  background-color: #F9F9F9;
+  padding: 4px;
+  border-radius: 4px;
+}
+
+.button-contact{
+  margin-top: 20px;
+}
